--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
    <body>
       <h1>Microsoft Impact Azure Days</h1>
       <p>Hello All!</p>
+      <p>Thank You <b>Microsoft Reactor</b>.</p>
    </body>	
 </html>
