--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
       <h1>Microsoft Impact Azure Days</h1>
       <p>Hello All!</p>
       <p>Thank You <b>Microsoft Reactor</b>.</p>
+      <p>The Sessions are Really <u><b>Cool</b></u>.</p>
    </body>	
 </html>
