--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <html>
-   <head>
-      <title>This is document title</title>
-   </head>	
-   <body>
-      <h1>Microsoft Impact Azure Days</h1>
-      <p>Hello All!</p>
-      <p>Thank You <b>Microsoft Reactor</b>.</p>
-      <p>The Sessions are Really <u><b>Cool</b></u>.</p>
-      <p>Excited to be part of these learning sessions <q>Hope to be a part in future too</q>.</p>
-   </body>	
+<head>
+<style>
+body {
+  background-color: Grey;
+}
+
+h1 {
+  color: Maroon;
+  text-align: center;
+}
+
+p {
+  font-family: calibri;
+  font-size: 24px;
+}
+</style>
+</head>
+<body>
+
+<h1>Microsoft Reactor Azure Days</h1>
+<p>Hello All!</p>
+<p>Thank You <b>Microsoft Reactor</b>.</p>
+<p>The Sessions are Really <u><b>Cool</b></u>.</p>
+<p>Excited to be part of these learning sessions <q>Hope to be a part in future too</q>.</p>
+
+</body>
 </html>
